# LED-Board

./: .gitignore  LED-Board.ino  README.md  WebGUI.html  gedoens-excel.xlsx  image.cpp  image.h  platformio.ini  sketch_nov03b.ino
client/: Cargo.toml
client/openweathermap/: Cargo.toml
client/openweathermap/src/: api.rs  forecast.rs  lib.rs
client/src/: main.rs
include/: image.hpp
rust-simulation/: Cargo.toml
rust-simulation/src/: main.rs
simulation/VirtualLedBoard/: VirtualLedBoard.pro  VirtualLedBoard_en_150.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h  udpserver.cpp  udpserver.h
src/: LED-Board.cpp  ProtocolDL.cpp  ProtocolDL.hpp  WebSockets.cpp  WebSockets.h  WebSocketsClient.cpp  WebSocketsServer.cpp  WebSocketsServer.h  image.cpp  image.hpp  panel.cpp  panel.hpp
src/sha1/: sha1.cpp
