[package]
authors = ["Patrick Hoffmann <pat@thats-software.com>"]
description = "easy access current weather data from OpenWeatherMap"
documentation = "https://docs.rs/openweathermap"
edition = "2018"
homepage = "https://openweathermap.thats-software.com"
keywords = ["weather", "openweathermap"]
license = "MIT OR Apache-2.0"
name = "openweathermap"
readme = "README.md"
version = "0.2.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.1", features = ["executor"]}
http = {version = "0.2.4"}
rand = {version = "0.8.3"}
regex = {version = "1.4.6"}
reqwest = {version = "0.11.3", default-features = false, features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
